--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-phone-number-input": "^3.2.16",
     "react-select": "^5.7.0",
     "react-switch": "^7.0.0",
+    "react-table": "^7.8.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
